# hbam-organoid

./: .gitignore  pyproject.toml
.omc/: prd.json  progress.txt
.omc/plans/: hbam-pipeline.md  open-questions.md
.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
config/: default.yaml  muscle_aging.yaml  muscle_spatial.yaml
docs/: .bkit-memory.json  .pdca-status.json  pipeline.md
docs/01-plan/features/: spatial-data-integration.plan.md
docs/02-design/features/: spatial-data-integration.design.md
docs/04-report/: hbam-pipeline.report.md
scripts/: download_data.py  prepare_data.py  prepare_muscle_data.py
src/hbam/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/hbam/data/: __init__.py  impute.py  loaders.py  normalize.py  qc.py
src/hbam/engine/: __init__.py  gene_sets.py  score.py  weights.py
src/hbam/integration/: __init__.py  align.py  embed.py  orthologs.py
src/hbam/modality/: __init__.py  functional.py  spatial.py  temporal.py
src/hbam/output/: __init__.py  figures.py  spatial_figures.py  style.py  tables.py
src/hbam/translate/: __init__.py  biomarkers.py  clinical.py  sample_score.py  spatial_biomarkers.py
src/hbam/utils/: logging.py  validation.py
tests/: conftest.py  test_edge_cases.py  test_engine.py  test_integration.py  test_loaders.py  test_modality.py  test_output.py  test_pipeline.py  test_qc.py  test_spatial_integration.py  test_translation.py
writing_outputs/20260410_research_report/: HBAM_therapeutic_targets.md
